--- a/about-us.html
+++ b/about-us.html
@@ -16,8 +16,8 @@
     </section>
 
     <nav class="topnav">
-      <a href="Homepage.HTML" class="btn-outline">BACK</a>
-      <a href="login register.html" class="btn-primary">SIGN UP</a>
+      <a href="index.html" class="btn-outline">BACK</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
 
@@ -69,3 +69,4 @@
   </footer>
 </body>
 </html>
+
