--- a/essential.html
+++ b/essential.html
@@ -17,7 +17,7 @@
     </section>
 
     <nav class="top">
-      <a href="Homepage.html" class="btn-outline">BACK</a>
+      <a href="index.html" class="btn-outline">BACK</a>
       <a href="login.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
