Fix HTML structure and update navigation links

--- a/essential2.html
+++ b/essential2.html
@@ -16,7 +16,7 @@
     </figure>
 
     <nav>
-      <a href="Homepage.html" class="btn-outline">BACK</a>
+      <a href="index.html" class="btn-outline">BACK</a>
       <a href="login.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
@@ -48,3 +48,4 @@
 
 </body>
 </html>
+
