--- a/essential6.html
+++ b/essential6.html
@@ -17,7 +17,7 @@
     </section>
 
     <nav>
-      <a href="Homepage.html" class="btn-outline">BACK</a>
+      <a href="index.html" class="btn-outline">BACK</a>
       <a href="login.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
