--- a/essential7.html
+++ b/essential7.html
@@ -17,7 +17,7 @@
     </section>
 
     <nav>
-      <a href="Homepage.html" class="btn-outline">BACK</a>
+      <a href="index.html" class="btn-outline">BACK</a>
       <a href="login.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
