--- a/faq2.html
+++ b/faq2.html
@@ -16,7 +16,7 @@
     </section>
 
     <nav class="top">
-      <a href="Homepage.html" class="btn-outline">🐾 BACK</a>
+      <a href="index.html" class="btn-outline">🐾 BACK</a>
       <a href="login.html" class="btn-primary">SIGN UP 🐾</a>
     </nav>
   </header>
@@ -70,3 +70,4 @@
   <footer></footer>
 </body>
 </html>
+
