--- a/essential2.html
+++ b/essential2.html
@@ -17,7 +17,7 @@
 
     <nav>
       <a href="index.html" class="btn-outline">BACK</a>
-      <a href="login.html" class="btn-primary">SIGN UP</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
 
@@ -48,4 +48,5 @@
 
 </body>
 </html>
+
 
