--- a/essential6.html
+++ b/essential6.html
@@ -18,7 +18,7 @@
 
     <nav>
       <a href="index.html" class="btn-outline">BACK</a>
-      <a href="login.html" class="btn-primary">SIGN UP</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
 
@@ -47,4 +47,5 @@
 
 </body>
 </html>
+
 
