--- a/essential7.html
+++ b/essential7.html
@@ -18,7 +18,7 @@
 
     <nav>
       <a href="index.html" class="btn-outline">BACK</a>
-      <a href="login.html" class="btn-primary">SIGN UP</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
 
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
