--- a/faq2.html
+++ b/faq2.html
@@ -17,7 +17,7 @@
 
     <nav class="top">
       <a href="index.html" class="btn-outline">🐾 BACK</a>
-      <a href="login.html" class="btn-primary">SIGN UP 🐾</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP 🐾</a>
     </nav>
   </header>
 
@@ -70,4 +70,5 @@
   <footer></footer>
 </body>
 </html>
+
 
