Fix BACK button link in login-register.html
Updated the link for the BACK button from 'Homepage.html' to 'index.html'.

--- a/login-register.html
+++ b/login-register.html
@@ -33,7 +33,7 @@
       <a href="register.html" class="register">REGISTER</a>
     </nav>
 
-    <a href="Homepage.html" class="back">BACK</a>
+    <a href="index.html" class="back">BACK</a>
   </main>
 
   <footer>
@@ -42,3 +42,4 @@
 
 </body>
 </html>
+
