--- a/mission-and-vission.html
+++ b/mission-and-vission.html
@@ -15,8 +15,8 @@
     </section>
 
     <nav class="top">
-      <a href="Homepage.html" class="btn-outline">🐾 BACK</a>
-      <a href="login.html" class="btn-primary">SIGN UP 🐾</a>
+      <a href="index.html" class="btn-outline">🐾 BACK</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP 🐾</a>
     </nav>
   </header>
 
@@ -55,3 +55,4 @@
   </main>
 </body>
 </html>
+
