--- a/we-are-not.html
+++ b/we-are-not.html
@@ -17,7 +17,7 @@
     </section>
 
     <nav class="topnav">
-      <a href="Homepage.html" class="btn-outline">BACK</a>
+      <a href="index.html" class="btn-outline">BACK</a>
       <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
@@ -45,3 +45,4 @@
   </footer>
 </body>
 </html>
+
