--- a/we-are.html
+++ b/we-are.html
@@ -17,8 +17,8 @@
     </section>
 
     <nav class="topnav">
-      <a href="Homepage.html" class="btn-outline">BACK</a>
-      <a href="login register.html" class="btn-primary">SIGN UP</a>
+      <a href="index.html" class="btn-outline">BACK</a>
+      <a href="login-register.html" class="btn-primary">SIGN UP</a>
     </nav>
   </header>
 
@@ -46,3 +46,4 @@
 
 </body>
 </html>
+
