--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adoptify</title>
-  <link rel="stylesheet" href="css/homepage.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 
-  <!-- Slideshow Background -->
+ 
   <section class="slideshow">
     <article class="slide"></article>
     <article class="slide"></article>
@@ -18,10 +18,10 @@
     <article class="slide"></article>
   </section>
 
-  <!-- Overlay -->
+
   <section class="overlay"></section>
 
-  <!-- Navbar -->
+ 
   <header>
     <section class="branding">
       <img src="images/logo.png" alt="Adoptify Logo">
@@ -33,7 +33,7 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  
   <main>
     <section class="hero">
       <h2>Connecting Hearts Through Technology</h2>
@@ -68,7 +68,7 @@
     </section>
   </main>
 
-  <!-- Info Section -->
+ 
   <section class="info-area">
     <section class="info-grid">
       <article class="info-card">
@@ -91,10 +91,11 @@
     </section>
   </section>
 
-  <!-- Footer -->
+ 
   <footer>
     <p>&copy; 2025 Adoptify | All Rights Reserved</p>
   </footer>
 
 </body>
 </html>
+
