--- a/login.html
+++ b/login.html
@@ -4,44 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | Adoptify</title>
-  <link rel="stylesheet" href="css/login.css">
+  <!-- Link External CSS -->
+  <link rel="stylesheet" href="css/login.css" />
 </head>
-
 <body>
-
-
+  <!-- Background -->
   <section class="slideshow">
     <figure></figure><figure></figure><figure></figure><figure></figure><figure></figure>
   </section>
   <section class="overlay"></section>
-
-
+  <!-- Main Login Section -->
   <main id="loginScreen">
     <section class="logo-area">
       <img src="images/logo.png" alt="Adoptify Logo">
     </section>
     <h1>ADOPTIFY</h1>
-
     <form id="loginForm">
       <label for="username">Username</label>
       <input type="text" id="username" placeholder="Your Username">
 
       <label for="password">Password</label>
       <input type="password" id="password" placeholder="Your Password">
-
       <nav class="actions">
-        <input type="submit" value="LOGIN">
+        <button type="submit" class="login-btn">LOGIN</button>
         <a href="login-register.html" class="back">BACK</a>
       </nav>
     </form>
-
     <p class="extra-links">
       <a href="#">Forgot your password?</a> |
       <a href="register.html">Not a member yet? Register</a>
     </p>
   </main>
-
-
+  <!-- Waiting Screen -->
   <section class="waiting" id="waitingScreen">
     <section class="logo-area">
       <img src="images/logo.png" alt="Adoptify Logo">
@@ -50,12 +44,11 @@
     <section class="spinner"></section>
     <p>PLEASE WAIT...</p>
   </section>
-
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Adoptify | All Rights Reserved</p>
   </footer>
-
+  <!-- Link External JavaScript -->
   <script src="js/login.js"></script>
 </body>
 </html>
-
